feat: add auto submit option

--- a/src/config/config_template.ini
+++ b/src/config/config_template.ini
@@ -8,6 +8,10 @@ preferred_project = CS0126444 - Wonen Cloudzone - dedicated operationeel project
 # don't add country code
 phone_number = 473666666
 
+# The script will automatically submit the time entries provisionally at the end of the script execution.
+# it will never permanently close the week
+auto_submit = false # | true
+
 [Browser]
 # internal = Launch a headful browser from inside the script
 # external = connect to existing browser session using the debug port 9222
