feat: add optional safe_mode flag to fix bug with multiple time entries for new work item in edge cases

--- a/src/config/config_template.ini
+++ b/src/config/config_template.ini
@@ -16,6 +16,10 @@ auto_submit = false # | true
 # internal = Launch a headful browser from inside the script
 # external = connect to existing browser session using the debug port 9222
 launch_type = external # | internal
+# Adds statements to wait toggle projects and wait for a full page reload when adding new work items
+# This is required in certain instances due to how Kiara flushes new items to the DOM
+# Recommendation is to start with false and only enable if needed.
+safe_mode = true # true | false
 
 [Logging]
 log_level = debug # | info | warning | error
